Fix width on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -252,11 +252,16 @@ footer p  {
         display: flex;
         align-items: center;
         flex-direction: column;
-        max-width: 70vw;
+        max-width: 80vw;
+        margin: 0 auto;
+    }
+
+    .accounts-items, .spendings-items {
+        max-width: 90vw;
     }
 
     .account-item, .spending-item {
-       max-width: 90%;
+        max-width: 90vw;
     }
 
     .account-item p, .spending-item p {
@@ -270,8 +275,6 @@ footer p  {
     .info-container p {
         font-size: 20px;
         padding-top: 30px;
-        /* text-wrap: wrap;
-        width: 50%; */
     }
 }
 
